# eaglechan

./: .gitignore  Cargo.toml  Makefile  README.md  data.db  database.db3  package-lock.json  tailwind.config.js
src/: index.hbs  index.rs  main.rs  pagedata.rs  post.rs  styles.css  template.db  upload.rs
src/css/: index.css  input.css
src/index/: index.hbs  mod.rs
src/templates/: index.hbs  post.hbs
src/view_post/: mod.rs  view_post.hbs
src/view_thread/: mod.rs  view_thread.hbs
src/write_post/: mod.rs  write_post.hbs
src/write_thread/: mod.rs  write_thread.hbs
