[package]
name = "eaglechan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
chrono = "0.4"
handlebars = "4.3"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
