[package]
name = "eaglechan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
argh = "0.1"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "4.3"
pretty_env_logger = "0.4.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "sqlite", "macros", "chrono"] }
